# internal/api/request/service.go
@@ -88,7 +88,12 @@ func (i Implementation) Create(ctx context.Context, req *proto.CreateRequest) (*
 
 func (i Implementation) Get(ctx context.Context, req *proto.GetRequest) (*proto.GetResponse, error) {
 	i.logger.Debug("request.Get request")
-	requests, err := i.requestService.GetAll(ctx)
+	user, err := i.authService.ExchangeTokenFromContext(ctx)
+	if err != nil {
+		return nil, model.ErrorUnauthenticated
+	}
+
+	requests, err := i.requestService.GetAllWithDepartment(ctx, user.DepartmentId)
 	if err != nil {
 		return nil, err
 	}
@@ -105,6 +110,10 @@ func (i Implementation) Get(ctx context.Context, req *proto.GetRequest) (*proto.
 
 func (i Implementation) Update(ctx context.Context, req *proto.UpdateRequest) (*empty.Empty, error) {
 	i.logger.Debug("request.Update request")
+	_, err := i.authService.ExchangeTokenFromContext(ctx)
+	if err != nil {
+		return nil, model.ErrorUnauthenticated
+	}
 
 	requestId, err := uuid.Parse(req.Request.Id)
 	if err != nil {
@@ -202,13 +211,23 @@ func (i Implementation) Update(ctx context.Context, req *proto.UpdateRequest) (*
 
 func (i Implementation) GetAsGeoJson(ctx context.Context, req *proto.GetRequest) (*proto.GetAsGeoJsonResponse, error) {
 	i.logger.Debug("request.GetAsGeoJson request")
-	bytes, err := i.requestService.GetAllAsGeoJson(ctx)
+	user, err := i.authService.ExchangeTokenFromContext(ctx)
+	if err != nil {
+		return nil, model.ErrorUnauthenticated
+	}
+
+	bytes, err := i.requestService.GetAllAsGeoJsonWithDepartment(ctx, user.DepartmentId)
 	return &proto.GetAsGeoJsonResponse{Geojson: bytes}, err
 }
 
 func (i Implementation) ExportExcel(ctx context.Context, req *empty.Empty) (*proto.ExportResponse, error) {
 	i.logger.Debug("request.ExportExcel request")
-	file, err := i.requestService.ExportExcel(ctx)
+	user, err := i.authService.ExchangeTokenFromContext(ctx)
+	if err != nil {
+		return nil, model.ErrorUnauthenticated
+	}
+
+	file, err := i.requestService.ExportExcel(ctx, user.DepartmentId)
 	if err != nil {
 		return nil, errors.Wrap(err, "can not export excel")
 	}
